<resources>
    <string name="app_name">Drip.io</string>

    <string name="installment_display">Valor de cada parcela: %1$s</string>
    <string name="competence_template">Competência: %1$d / %2$d</string>
    <string name="save">Salvar</string>
    <string name="register">Registrar</string>
    <string name="name">Nome</string>
    <string name="value">Valor</string>
    <string name="delete">Excluir</string>
    <string name="cancel">Cancelar</string>
    <string name="payment_date">Data de Pagamento</string>
    <string name="select_expense">Selecionar despesa…</string>
    <string name="select_payment_method">Selecionar método de pagamento…</string>
    <string name="select_category">Selecionar categoria…</string>
    <string name="currency_prefix">R$</string>
    <string name="expense_currency_prefix">- R$</string>
    <string name="installment_resume">(x%1$d)</string>
    <string name="installment_indicator">Prestações: %1$d/%2$d</string>

    <string name="confirm_delete_payment_method_title">Confirmação de exclusão de método de pagamento</string>
    <string name="confirm_delete_payment_method_message">Você deseja excluir %s?</string>
    <string name="payment_resume_expense_template">Referente a despesa %s.</string>
    <string name="payment_resume_expense_installment">Status das prestações: %1$d pagas de %2$d.</string>
    <string name="less_paid_expense_installment_template">O valor a ser pago será menor que o valor de uma parcela da despesa (R$ %1$s).</string>
</resources>